@@ -151,3 +151,4 @@ sudo
 rsync
 eudev
 gperf
+multipath-tools
