@@ -133,3 +133,4 @@ efc2ee6093aa6aa0a88aaad83e998a3f  dlm-4.0.2.tar.xz
 2b7c39a561f59d146882f4c020fa9060  crmsh-2.1.0.tar.gz
 a9a65972afc173ec7a39c585f4eea69c  lxml-3.4.4.tar.gz
 46ef603de23704658003782b5eae7bab  lvm2-2_02_120.tar.xz
+faf261d4cc717bf4c979557dc7bf5f52  multipath-tools-0.5.0.tar.bz2
