@@ -133,3 +133,4 @@ fd2cedb42864c27d3bfcde6b8ffa2008b9411cb49c7ec5fabda9aab8a3e784df  pacemaker-1.1.
 178b3179039ff5f3b5e7cf279ccfcdca14b55a3c5ce79f12063da68852d52a44  crmsh-2.1.0.tar.gz
 b3d362bac471172747cda3513238f115cbd6c5f8b8e6319bf6a97a7892724099  lxml-3.4.4.tar.gz
 7adf13dbf60bcb9c2e4b8ba11e0aa711a81d11eda6d88e1534ad72b3878a9a0e  lvm2-2_02_120.tar.xz
+f13cf1eb84e94e83b2019e68f7965526903c13e94246db43965d181668a0a6f9  multipath-tools-0.5.0.tar.bz2
