@@ -5,6 +5,7 @@
 rc.openibd_enable=YES
 rc.opensm_enable=NO
 rc.sshd_enable=YES
+rc.multipathd_enable=NO
 rc.mdraid_enable=YES
 rc.lvm2_enable=YES
 rc.eio_enable=NO
