@@ -1289,7 +1289,9 @@ CONFIG_DM_MIRROR=y
 # CONFIG_DM_LOG_USERSPACE is not set
 CONFIG_DM_RAID=y
 CONFIG_DM_ZERO=y
-# CONFIG_DM_MULTIPATH is not set
+CONFIG_DM_MULTIPATH=y
+# CONFIG_DM_MULTIPATH_QL is not set
+# CONFIG_DM_MULTIPATH_ST is not set
 # CONFIG_DM_DELAY is not set
 # CONFIG_DM_UEVENT is not set
 # CONFIG_DM_FLAKEY is not set
